--- a/DecorationEventsPlanner/DecorationEventsPlanner/Base.lproj/Main.storyboard
+++ b/DecorationEventsPlanner/DecorationEventsPlanner/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rDe-zT-rXa">
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CalendarMonthCell" id="rDe-zT-rXa" customClass="UICollectionViewCell">
                                     <rect key="frame" x="0.0" y="0.0" width="371" height="264"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
@@ -220,10 +220,6 @@
                                         </button>
                                     </subviews>
                                 </collectionReusableView>
-                                <connections>
-                                    <outlet property="dataSource" destination="ySb-xA-TFh" id="q0f-Ip-BhQ"/>
-                                    <outlet property="delegate" destination="ySb-xA-TFh" id="wg2-ks-NnK"/>
-                                </connections>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="January" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Au1-mb-zRQ">
                                 <rect key="frame" x="151" y="84" width="78" height="36"/>
